--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+dj-database-url==2.3.0
 Django==5.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
@@ -9,5 +10,6 @@ pillow==11.2.1
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
 sqlparse==0.5.3
+typing_extensions==4.13.2
 tzdata==2025.2
 whitenoise==6.9.0
